0032430: Coding Rules - eliminate CLang warning -Wdeprecated-copy

Introduced Standard_DELETE alias to C++11 feature "=delete".